2019-06-09 Marek M. Cel <marekcel@marekcel.pl>
    
    * HUD color and opacity setting added
    
    * variable masses names added
    
    * DockWidgetAuto added
    
    * keyboard controls roll, pitch and yaw channels modified
    
    * CGI landing gear modifies
    
    * on-ground initialization speed up fix
    
    * data references removed, static data structures used instead



2019-05-26 Marek M. Cel <marekcel@marekcel.pl>

    * Cessna 172 3D models for CFD
    
    * Cessna 172 OpenFOAM simulations case and run script

    * addition and multiplication operators added to fdm::Table class
    
    * Cessna 172 aerodynamic characteristics based on OpenFOAM simulations
    
    * F-16 renamed
    
    * cppcheck run script
    
    * unit tests added
    
    * Qt projects source and header files relative paths

    * aerodynamic characteristics approximation tool added