@@ -1,0 +1,3 @@
+add_library( fdm_c130 STATIC
+    c130_Aircraft.cpp
+)
