@@ -1,0 +1,9 @@
+add_library( fdm_f16 STATIC
+    f16_Aerodynamics.cpp
+    f16_Aircraft.cpp
+    f16_Controls.cpp
+    f16_FLCS.cpp
+    f16_LandingGear.cpp
+    f16_Mass.cpp
+    f16_Propulsion.cpp
+)
