@@ -1,0 +1,11 @@
+add_library( fdm_uh60 STATIC
+    uh60_Aerodynamics.cpp
+    uh60_AFCS.cpp
+    uh60_Aircraft.cpp
+    uh60_Controls.cpp
+    uh60_Fuselage.cpp
+    uh60_LandingGear.cpp
+    uh60_Mass.cpp
+    uh60_Propulsion.cpp
+    uh60_StabilizerHor.cpp
+)
