@@ -1,0 +1,4 @@
+add_library( hid STATIC
+    hid_Joysticks.cpp
+    hid_Manager.cpp
+)
