@@ -13,6 +13,8 @@
     * on-ground initialization speed up fix
     
     * data references removed, static data structures used instead
+    
+    * CMake project files added
 
 
 
